--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,7 @@
 								More
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="/dashboard.html">Dashboard</a></li>
+								<li><a class="dropdown-item" href="/index.html">Dashboard</a></li>
 								<li><a class="dropdown-item" href="/projects.html">Projects</a></li>
 								<li><hr class="dropdown-divider" /></li>
 								<li>
