--- a/projectList.html
+++ b/projectList.html
@@ -18,7 +18,7 @@
 		<body class="container-fluid bg-dark ">
 			<!-- navbar  -->
 			<nav class="navbar navbar-expand-lg navbar-light bg-success fs-3 ">
-				<nav class="navbar navbar-light bg-light bg-success">
+				<nav class="navbar navbar-light bg-success">
 					<div class="container-fluid">
 					  <a class="navbar-brand" href="/Homepage.html">
 						<img src="/image/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -47,7 +47,7 @@
 									More
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item" href="/index.html">Dashboard</a></li>
+									<li><a class="dropdown-item" href="/dashboard.html">Dashboard</a></li>
 									<li><a class="dropdown-item" href="/projects.html">Projects</a></li>
 									<li><hr class="dropdown-divider" /></li>
 									<li>
@@ -110,11 +110,11 @@
 					   <button class="bg-success rounded-pill">Approved</button>
 				   </div>
 			   </div>
-			   <p class="password">Thank you !</p>
+			 /p>
 			</div>
 			
 			 
-	<!-- Fotter start here  -->
+	<!-- Footer start here  -->
 	<div class="footer">
         <p>©2022 by IIUM Community Engagement Portal.</p>
       </div>
