code has changed

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fs-3 bg-success">
 			<nav class="navbar navbar-light bg-success">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/Homepage.html">
+                  <a class="navbar-brand" href="/index.html">
                     <img src="/image/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                     IIUM COMMUNITY MANAGEMENT PORTAL
                   </a>
@@ -28,7 +28,7 @@
 				<div class="collapse navbar-collapse  " id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="/homepage.html"
+							<a class="nav-link active" aria-current="page" href="/index.html"
 								>Homepage</a
 							>
 						</li>
@@ -71,6 +71,7 @@
         
 
      </div>
+
      <div class="footer">
         <p>©2022 by IIUM Community Engagement Portal.</p>
       </div>
