--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-success fs-3">
                 <nav class="navbar navbar-light bg-success">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="/homepage.html">
+                      <a class="navbar-brand" href="/index.html">
                         <img src="/image/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                         IIUM COMMUNITY MANAGEMENT PORTAL
                       </a>
@@ -29,8 +29,8 @@
                     <div class="collapse navbar-collapse  " id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/dashboard.html"
-                                    >Homapage</a
+                                <a class="nav-link active" aria-current="page" href="/index.html"
+                                    >Homepage</a
                                 >
                             </li>
     
